@@ -1,4 +1,5 @@
 0.06
+ - Add length of leader to error.
  - Update copyright years.
 
 0.05 2024-12-20T15:20:44+01:00
